[gd_scene load_steps=6 format=2]

[ext_resource path="res://src/main/ui/menu/theme/h4.theme" type="Theme" id=1]
[ext_resource path="res://src/demo/world/cutscene-demo.gd" type="Script" id=2]
[ext_resource path="res://src/main/ui/DialogBackdrop.tscn" type="PackedScene" id=3]
[ext_resource path="res://src/demo/world/cutscene-demo-fatness.gd" type="Script" id=4]
[ext_resource path="res://src/demo/world/cutscene-demo-long-names.gd" type="Script" id=5]

[node name="CutsceneDemo" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -200.0
margin_top = -30.0
margin_right = 200.0
margin_bottom = 30.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LongNames" type="CheckBox" parent="VBoxContainer"]
margin_right = 400.0
margin_bottom = 28.0
theme = ExtResource( 1 )
text = "Long Names"
script = ExtResource( 5 )

[node name="Fatness" type="HBoxContainer" parent="VBoxContainer"]
margin_top = 32.0
margin_right = 400.0
margin_bottom = 60.0
script = ExtResource( 4 )

[node name="CheckBox" type="CheckBox" parent="VBoxContainer/Fatness"]
margin_right = 90.0
margin_bottom = 28.0
theme = ExtResource( 1 )
text = "Fatness"

[node name="HSlider" type="HSlider" parent="VBoxContainer/Fatness"]
margin_left = 94.0
margin_right = 361.0
margin_bottom = 28.0
size_flags_horizontal = 3
size_flags_vertical = 1
min_value = 1.0
max_value = 10.0
value = 10.0
tick_count = 10
ticks_on_borders = true

[node name="Value" type="Label" parent="VBoxContainer/Fatness"]
margin_left = 365.0
margin_top = 4.0
margin_right = 400.0
margin_bottom = 24.0
rect_min_size = Vector2( 35, 0 )
size_flags_horizontal = 0
theme = ExtResource( 1 )
text = "10.0"
align = 1

[node name="Open" type="HBoxContainer" parent="VBoxContainer"]
margin_top = 64.0
margin_right = 400.0
margin_bottom = 94.0

[node name="Button" type="Button" parent="VBoxContainer/Open"]
margin_right = 52.0
margin_bottom = 30.0
theme = ExtResource( 1 )
text = "Open"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LineEdit" type="LineEdit" parent="VBoxContainer/Open"]
margin_left = 56.0
margin_right = 400.0
margin_bottom = 30.0
size_flags_horizontal = 3
theme = ExtResource( 1 )
text = "marsh/hello_everyone_000"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="StartButton" type="Button" parent="VBoxContainer"]
margin_top = 98.0
margin_right = 400.0
margin_bottom = 124.0
theme = ExtResource( 1 )
text = "Start"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Dialogs" type="Control" parent="."]
pause_mode = 2
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Backdrop" parent="Dialogs" instance=ExtResource( 3 )]

[node name="OpenFile" type="FileDialog" parent="Dialogs"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -320.0
margin_top = -200.0
margin_right = 320.0
margin_bottom = 200.0
popup_exclusive = true
window_title = "Open a File"
mode = 0
filters = PoolStringArray( "*.json" )
current_dir = "res://assets/main/puzzle/levels/cutscenes"
current_path = "res://assets/main/puzzle/levels/cutscenes/"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Error" type="AcceptDialog" parent="Dialogs"]
margin_right = 250.0
margin_bottom = 58.0
popup_exclusive = true
window_title = "Error"
dialog_autowrap = true
[connection signal="toggled" from="VBoxContainer/LongNames" to="VBoxContainer/LongNames" method="_on_toggled"]
[connection signal="pressed" from="VBoxContainer/Fatness/CheckBox" to="VBoxContainer/Fatness" method="_on_CheckBox_pressed"]
[connection signal="value_changed" from="VBoxContainer/Fatness/HSlider" to="VBoxContainer/Fatness" method="_on_HSlider_value_changed"]
[connection signal="pressed" from="VBoxContainer/Open/Button" to="." method="_on_OpenButton_pressed"]
[connection signal="pressed" from="VBoxContainer/StartButton" to="." method="_on_StartButton_pressed"]
[connection signal="about_to_show" from="Dialogs/OpenFile" to="Dialogs/Backdrop" method="_on_Dialog_about_to_show"]
[connection signal="file_selected" from="Dialogs/OpenFile" to="." method="_on_OpenFileDialog_file_selected"]
[connection signal="popup_hide" from="Dialogs/OpenFile" to="Dialogs/Backdrop" method="_on_Dialog_popup_hide"]
[connection signal="about_to_show" from="Dialogs/Error" to="Dialogs/Backdrop" method="_on_Dialog_about_to_show"]
[connection signal="popup_hide" from="Dialogs/Error" to="Dialogs/Backdrop" method="_on_Dialog_popup_hide"]
